@@ -1,5 +1,9 @@
+
+-XX:TieredStopAtLevel=1
+-XX:+UseParallelGC
+-Xverify:none
+-XX:+DisableExplicitGC
 --enable-native-access=ALL-UNNAMED
 --add-opens=java.base/java.lang=ALL-UNNAMED
 --add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED
 --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-
